GGB-1814 fix overlapping border
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@54421 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/av-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/av-styles.scss
@@ -188,6 +188,7 @@
 			padding-top: 0px;
 			padding-left: 4px;
 			padding-right: 4px;
+			height: 47px;
 			/*width: 62px; */
 			img {
 				opacity: 0.54;
